--- a/.gitignore
+++ b/.gitignore
@@ -12,11 +12,8 @@
 /db/*.sqlite3-journal
 
 # Ignore all logfiles and tempfiles.
-/log/*
-/tmp/*
 tmp/
-!/log/.keep
-!/tmp/.keep
+log/
 
 /node_modules
 /yarn-error.log
